<resources>
    <string name="app_name">Teleport</string>

    <string name="on_demand">On Demand</string>
    <string name="medicines">Medicines</string>

    <string name="font_fontFamily_medium">sans-serif-medium</string>
    <string name="title_activity_on_demand">OnDemand</string>
    <string name="required_permissions_promo">Teleport app needs permissions for Location, Camera, Contacts </string>
    <string name="exit">Exit </string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="section_title">We Deliver Your Dreams</string>
    <string name="section_sub_title">On Demand Deliveries</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
