<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/required_permissions_promo"
            android:paddingTop="96dp"
            android:textAlignment="center" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white" />
        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exit"
                style="@style/PromoScreenButtonStyle" />
            <TextView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next_with_arrow"
                android:contentDescription="@string/next"
                style="@style/PromoScreenButtonStyle" />
            <TextView
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/settings_with_arrow"
                android:contentDescription="@string/settings"
                style="@style/PromoScreenButtonStyle"
                android:visibility="gone"/>
            </LinearLayout>
    </LinearLayout>